# forecast-cli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
forecastapp_api/: Cargo.toml
forecastapp_api/src/: forecastapp_models.rs  lib.rs
src/: arg_handler.rs  args.rs  command_handler.rs  main.rs  utils.rs
