[package]
name = "forecastapp_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4.0"
serde_json = "1.0"
hyper-tls = "0.5.0"
serde = { version = "1.0.137", features = ["derive"] }
tracing = "0.1.29"
dotenv = "0.15.0"
anyhow = "1.0.58"
log = "0.4.17"
color-eyre = "0.6.2"
